Safari stretch fix

--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -61,6 +61,12 @@
   @apply border-b border-t border-gold-500 shadow-xl;
 }
 
+.react-photo-gallery--gallery > div > img {
+  align-self: flex-start !important;
+  max-height: 300px !important;
+  object-fit: cover;
+}
+
 .button {
   @apply min-w-max text-xl lg:text-2xl shadow-lg border py-3 px-4 lg:px-8 duration-500 transition-colors mb-6 lg:mb-0;
 }
@@ -79,15 +85,6 @@
   padding-left: 1em;
   text-indent: -0.7em;
 }
-
-.prose li:before {
-  color: red !important; /* or whatever color you prefer */
-}
-
-/* change to react-scroll */
-/* html { */
-/*   scroll-behavior: smooth; */
-/* } */
 
 .bottom-inner-shadow {
   -moz-box-shadow: inset 0 -50px 50px -30px #000000;
